syntax = "proto3";

package registerServices;

service RegisterServices {
    rpc register (userData) returns (registerAcknowledgement);
};



message userData {
    string userId = 1;
    string hashedPassword = 2;
    string hashedName = 3;
    string email = 4;
    string hashedMotherName = 5;
    string hashedFatherName = 6;
    string hashedDOB = 7;
    string hashedIpAddress = 8;
    double longitude = 9;
    double latitude = 10;
    string browser = 11;
    string deviceName = 12;
    string method = 13;
    string gender = 14;
    string twoFactorAuthentication = 15;
    string dateOfBirth = 16;
}

message registerAcknowledgement {
    string acknowledgement = 1;
    string userId = 2;
}

